--- a/config.org
+++ b/config.org
@@ -2,6 +2,93 @@
 #+TITLE: Emacs Configuration
 #+AUTHOR: Tobias Backer Dirks
 
+* Table of Contents                                                     :TOC:
+- [[#about][About]]
+- [[#initialize-emacs][Initialize Emacs]]
+  - [[#packages-sources][Packages Sources]]
+  - [[#use-package][use-package]]
+- [[#start-up][Start Up]]
+  - [[#better-defaults][Better defaults]]
+  - [[#better-file-management-with-xdg][Better file management with XDG]]
+  - [[#customization][Customization]]
+  - [[#fonts][Fonts]]
+  - [[#lsp][LSP]]
+  - [[#theming][Theming]]
+  - [[#disable-graphical-ui-elements][Disable graphical UI elements.]]
+- [[#languages][Languages]]
+  - [[#arduino][Arduino]]
+  - [[#c][C++]]
+  - [[#cmake][CMake]]
+  - [[#css--less--scss][CSS – LESS – SCSS]]
+  - [[#csv][CSV]]
+  - [[#docker][Docker]]
+  - [[#lisp][Lisp]]
+  - [[#html][HTML]]
+  - [[#ini][INI]]
+  - [[#java][Java]]
+  - [[#javascript][JavaScript]]
+  - [[#json][JSON]]
+  - [[#latex][LaTeX]]
+  - [[#lua][Lua]]
+  - [[#markdown][Markdown]]
+  - [[#python][Python]]
+  - [[#shell-script][Shell-script]]
+  - [[#sql][SQL]]
+  - [[#xml][XML]]
+  - [[#yaml][YAML]]
+- [[#advanced-configuration][Advanced Configuration]]
+  - [[#alert][Alert]]
+  - [[#auto-completion][Auto-Completion]]
+  - [[#backups][Backups]]
+  - [[#browser][Browser]]
+  - [[#buffers][Buffers]]
+  - [[#button-lock][Button Lock]]
+  - [[#calculator][Calculator]]
+  - [[#calendar][Calendar]]
+  - [[#dashboard][Dashboard]]
+  - [[#deft][Deft]]
+  - [[#dired][Dired]]
+  - [[#editorconfig][EditorConfig]]
+  - [[#ending-up][Ending Up]]
+  - [[#epub][EPUB]]
+  - [[#general][General]]
+  - [[#highlight-indentation][Highlight indentation]]
+  - [[#history][History]]
+  - [[#hydra][Hydra]]
+  - [[#icons][Icons]]
+  - [[#irc][IRC]]
+  - [[#ivy][Ivy]]
+  - [[#keybindings][Keybindings]]
+  - [[#linters][Linters]]
+  - [[#lorem-ipsum][Lorem Ipsum]]
+  - [[#navigation][Navigation]]
+  - [[#parentheses][Parentheses]]
+  - [[#paste][Paste]]
+  - [[#pdf][PDF]]
+  - [[#point-and-region][Point and Region]]
+  - [[#projectile][Projectile]]
+  - [[#recent-files][Recent Files]]
+  - [[#requests][Requests]]
+  - [[#spelling][Spelling]]
+  - [[#terminal][Terminal]]
+  - [[#useful-tweaks][Useful Tweaks]]
+  - [[#version-control][Version Control]]
+  - [[#whitespaces][Whitespaces]]
+  - [[#windows][Windows]]
+  - [[#word-wrap][Word Wrap]]
+  - [[#yasnippet][YASnippet]]
+  - [[#zetteldeft][Zetteldeft]]
+- [[#org-mode][Org-Mode]]
+  - [[#agenda][Agenda]]
+  - [[#bullets][Bullets]]
+  - [[#capture][Capture]]
+  - [[#clock][Clock]]
+  - [[#contacts][Contacts]]
+  - [[#customization-1][Customization]]
+  - [[#encryption--decryption][Encryption / Decryption]]
+  - [[#journal][Journal]]
+  - [[#languages-1][Languages]]
+
 * About
 
 Welcome to my literate Emacs configuration file.
@@ -1879,7 +1966,7 @@ Group TeX commands.
      (("g" reftex-goto-label "goto")
       ("r" reftex-query-replace-document "replace")
       ("s" counsel-rg "search")
-      ("t" reftex-toc "table of content"))))
+      ("t" reftex-toc "table of contents"))))
 #+end_src
 
 *** Hydra / Tool
@@ -3137,3 +3224,443 @@ and automatically expand it into function templates.
  (use-package zetteldeft)
  (zetteldeft-set-classic-keybindings)
  #+end_src
+
+* Org-Mode
+
+One of my favorite modes in GNU Emacs. I mainly use it to organize my life, take
+notes and make my presentations, but you can do lots of things with
+it. =org-mode= it's like the sky, without limits.
+
+#+BEGIN_QUOTE
+Org mode is for keeping notes, maintaining TODO lists, planning projects, and
+authoring documents with a fast and effective plain-text system.
+
+[[http://orgmode.org/][Carsten Dominik]]
+#+END_QUOTE
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org
+    :ensure org-plus-contrib
+    :delight "Θ "
+    :bind ("C-c i" . org-insert-structure-template)
+    :preface
+    (defun my/org-compare-times (clocked estimated)
+      "Gets the ratio between the timed time and the estimated time."
+      (if (and (> (length clocked) 0) estimated)
+          (format "%.2f"
+                  (/ (* 1.0 (org-hh:mm-string-to-minutes clocked))
+                     (org-hh:mm-string-to-minutes estimated)))
+        ""))
+
+    (defun my/org-archive-done-tasks ()
+      "Archives finished or cancelled tasks."
+      (interactive)
+      (org-map-entries
+       (lambda ()
+         (org-archive-subtree)
+         (setq org-map-continue-from (outline-previous-heading)))
+       "TODO=\"DONE\"|TODO=\"CANCELLED\"" (if (org-before-first-heading-p) 'file 'tree)))
+
+    (defun my/org-jump ()
+      "Jumps to a specific task."
+      (interactive)
+      (let ((current-prefix-arg '(4)))
+        (call-interactively 'org-refile)))
+
+    (defun my/org-use-speed-commands-for-headings-and-lists ()
+      "Activates speed commands on list items too."
+      (or (and (looking-at org-outline-regexp) (looking-back "^\**"))
+          (save-excursion (and (looking-at (org-item-re)) (looking-back "^[ \t]*")))))
+    (defmacro ignore-args (fnc)
+      "Returns function that ignores its arguments and invokes FNC."
+      `(lambda (&rest _rest)
+         (funcall ,fnc)))
+    :hook ((after-save . my/config-tangle)
+           (auto-save . org-save-all-org-buffers)
+           (org-mode . org-indent-mode))
+    :custom
+    (org-archive-location "~/.personal/archives/%s::")
+    (org-blank-before-new-entry '((heading . t)
+                                  (plain-list-item . t)))
+    (org-cycle-include-plain-lists 'integrate)
+    (org-ditaa-jar-path "~/.local/lib/ditaa0_9.jar")
+    (org-expiry-inactive-timestamps t)
+    (org-export-backends '(ascii beamer html icalendar latex man md org texinfo))
+    (org-log-done 'time)
+    (org-log-into-drawer "LOGBOOK")
+    (org-modules '(org-crypt
+                   org-habit
+                   org-info
+                   org-irc
+                   org-mouse
+                   org-protocol
+                   org-tempo))
+    (org-refile-allow-creating-parent-nodes 'confirm)
+    (org-refile-use-cache nil)
+    (org-refile-use-outline-path nil)
+    (org-refile-targets '((org-agenda-files . (:maxlevel . 6))))
+    (org-startup-folded nil)
+    (org-startup-with-inline-images t)
+    (org-tag-alist '(("@coding" . ?c)
+                     ("@computer" . ?l)
+                     ("@errands" . ?e)
+                     ("@home" . ?h)
+                     ("@phone" . ?p)
+                     ("@reading" . ?r)
+                     ("@school" . ?s)
+                     ("@work" . ?b)
+                     ("@writing" . ?w)
+                     ("crypt" . ?C)
+                     ("fuzzy" . ?0)
+                     ("highenergy" . ?1)))
+    (org-tags-exclude-from-inheritance '("crypt" "project"))
+    (org-todo-keywords '((sequence "TODO(t)"
+                                   "STARTED(s)"
+                                   "WAITING(w@/!)"
+                                   "SOMEDAY(.)" "|" "DONE(x!)" "CANCELLED(c@)")
+                         (sequence "TOBUY"
+                                   "TOSHRINK"
+                                   "TOCUT"
+                                   "TOSEW" "|" "DONE(x)")))
+    (org-use-effective-time t)
+    (org-use-speed-commands 'my/org-use-speed-commands-for-headings-and-lists)
+    (org-yank-adjusted-subtrees t)
+    :config
+    (add-to-list 'org-global-properties '("Effort_ALL". "0:05 0:15 0:30 1:00 2:00 3:00 4:00"))
+    (add-to-list 'org-speed-commands-user '("!" my/org-clock-in-and-track))
+    (add-to-list 'org-speed-commands-user '("$" call-interactively 'org-archive-subtree))
+    (add-to-list 'org-speed-commands-user '("d" my/org-move-line-to-destination))
+    (add-to-list 'org-speed-commands-user '("i" call-interactively 'org-clock-in))
+    (add-to-list 'org-speed-commands-user '("o" call-interactively 'org-clock-out))
+    (add-to-list 'org-speed-commands-user '("s" call-interactively 'org-schedule))
+    (add-to-list 'org-speed-commands-user '("x" org-todo "DONE"))
+    (add-to-list 'org-speed-commands-user '("y" org-todo-yesterday "DONE"))
+    (advice-add 'org-deadline :after (ignore-args #'org-save-all-org-buffers))
+    (advice-add 'org-schedule :after (ignore-args #'org-save-all-org-buffers))
+    (advice-add 'org-store-log-note :after (ignore-args #'org-save-all-org-buffers))
+    (advice-add 'org-todo :after (ignore-args #'org-save-all-org-buffers))
+    (org-clock-persistence-insinuate)
+    (org-load-modules-maybe t))
+#+end_src
+
+If like me, you're tired of manually updating your tables of contents, =toc-org=
+will maintain a table of contents at the first heading that has a =:TOC:= tag.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package toc-org
+    :after org
+    :hook (org-mode . toc-org-enable))
+#+end_src
+
+For a cleaner online mode.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-indent :ensure nil :after org :delight)
+#+end_src
+
+** Agenda
+
+Nowadays, it is crucial to be organized. Even more than before. That is why it
+is important to take the time to make a configuration that is simple to use and
+that makes your life easier with an irreproachable organization.
+
+=org-agenda= allows me to be organized with daily tasks. As a result, I can use
+my time to the fullest.
+
+I put my =org= files in [[https://github.com/syncthing/syncthing][Syncthing]] in order to be able to check my agenda and
+update it from several computers and smartphones.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-agenda
+    :ensure nil
+    :bind (:map org-agenda-mode-map
+                ("X" . my/org-agenda-mark-done-and-add-followup)
+                ("x" . my/org-agenda-done))
+    :preface
+    (defun my/org-agenda-done (&optional arg)
+      "Mark current TODO as done.
+    This changes the line at point, all other lines in the agenda referring to
+    the same tree node, and the headline of the tree node in the Org-mode file."
+      (interactive "P")
+      (org-agenda-todo "DONE"))
+
+    (defun my/org-agenda-mark-done-and-add-followup ()
+      "Mark the current TODO as done and add another task after it.
+     Creates it at the same level as the previous task, so it's better to use
+     this with to-do items than with projects or headings."
+      (interactive)
+      (org-agenda-todo "DONE")
+      (org-agenda-switch-to)
+      (org-capture 0 "t"))
+    :custom
+    (org-agenda-dim-blocked-tasks t)
+    (org-agenda-files '("~/.personal/agenda"))
+    (org-agenda-inhibit-startup t)
+    (org-agenda-show-log t)
+    (org-agenda-skip-deadline-if-done t)
+    (org-agenda-skip-deadline-prewarning-if-scheduled 'pre-scheduled)
+    (org-agenda-skip-scheduled-if-done t)
+    (org-agenda-span 2)
+    (org-agenda-start-on-weekday 6)
+    (org-agenda-sticky nil)
+    (org-agenda-tags-column -100)
+    (org-agenda-time-grid '((daily today require-timed)))
+    (org-agenda-use-tag-inheritance t)
+    (org-columns-default-format "%14SCHEDULED %Effort{:} %1PRIORITY %TODO %50ITEM %TAGS")
+    (org-default-notes-file "~/.personal/agenda/organizer.org")
+    (org-directory "~/.personal")
+    (org-enforce-todo-dependencies t)
+    (org-habit-completed-glyph ?✓)
+    (org-habit-graph-column 80)
+    (org-habit-show-habits-only-for-today nil)
+    (org-habit-today-glyph ?‖)
+    (org-track-ordered-property-with-tag t))
+#+end_src
+
+** Bullets
+
+Prettier [[https://github.com/sabof/org-bullets][bullets]] in org-mode.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-bullets
+    :hook (org-mode . org-bullets-mode)
+    :custom
+    (org-bullets-bullet-list '("●" "►" "▸")))
+#+end_src
+
+** Capture
+
+=org-capture= templates saves you a lot of time when adding new entries. I use
+it to quickly record tasks, ledger entries, notes and other semi-structured
+information.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-capture
+    :ensure nil
+    :after org
+    :preface
+    (defvar my/org-basic-task-template "* TODO %^{Task}
+  :PROPERTIES:
+  :Effort: %^{effort|1:00|0:05|0:15|0:30|2:00|4:00}
+  :END:
+  Captured %<%Y-%m-%d %H:%M>" "Template for basic task.")
+
+    (defvar my/org-contacts-template "* %(org-contacts-template-name)
+  :PROPERTIES:
+  :ADDRESS: %^{289 Cleveland St. Brooklyn, 11206 NY, USA}
+  :BIRTHDAY: %^{yyyy-mm-dd}
+  :EMAIL: %(org-contacts-template-email)
+  :NOTE: %^{NOTE}
+  :END:" "Template for org-contacts.")
+
+    :custom
+    (org-capture-templates
+     `(("B" "Book" checkitem (file+headline "~/.personal/other/books.org" "Books")
+        "- [ ] %^{Book}"
+        :immediate-finish t)
+
+       ("L" "Learning" checkitem (file+headline "~/.personal/other/learning.org" "Things")
+        "- [ ] %^{Thing}"
+        :immediate-finish t)
+
+       ("M" "Movie" checkitem (file+headline "~/.personal/other/movies.org" "Movies")
+        "- [ ] %^{Movie}"
+        :immediate-finish t)
+
+       ("P" "Purchase" checkitem (file+headline "~/.personal/other/purchases.org" "Purchases")
+        "- [ ] %^{Item}"
+        :immediate-finish t)
+
+       ("c" "Contact" entry (file+headline "~/.personal/agenda/contacts.org" "Friends"),
+        my/org-contacts-template
+        :empty-lines 1)
+
+       ("p" "People" entry (file+headline "~/.personal/agenda/people.org" "Tasks"),
+        my/org-basic-task-template
+        :empty-lines 1)
+
+       ("s" "Work" entry (file+headline "~/.personal/agenda/work.org" "Tasks"),
+        my/org-basic-task-template
+        :empty-lines 1)
+
+       ("t" "Task" entry (file+headline "~/.personal/agenda/organizer.org" "Tasks"),
+        my/org-basic-task-template
+        :empty-lines 1))))
+#+end_src
+
+** Clock
+
+Being organized is one thing, but being optimal is another. =org-clock= allows
+you to estimate your tasks and time them. This is useful, since with experience,
+you can have a better estimate of the time that needs to be given to each task.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-clock
+    :ensure nil
+    :after org
+    :preface
+    (defun my/org-mode-ask-effort ()
+      "Ask for an effort estimate when clocking in."
+      (unless (org-entry-get (point) "Effort")
+        (let ((effort
+               (completing-read
+                "Effort: "
+                (org-entry-get-multivalued-property (point) "Effort"))))
+          (unless (equal effort "")
+            (org-set-property "Effort" effort)))))
+    :hook (org-clock-in-prepare-hook . my/org-mode-ask-effort)
+    :custom
+    (org-clock-clocktable-default-properties
+     '(:block day :maxlevel 2 :scope agenda :link t :compact t :formula %
+              :step day :fileskip0 t :stepskip0 t :narrow 80
+              :properties ("Effort" "CLOCKSUM" "CLOCKSUM_T" "TODO")))
+    (org-clock-continuously nil)
+    (org-clock-in-switch-to-state "STARTED")
+    (org-clock-out-remove-zero-time-clocks t)
+    (org-clock-persist t)
+    (org-clock-persist-file (expand-file-name (format "%s/emacs/org-clock-save.el" xdg-cache)))
+    (org-clock-persist-query-resume nil)
+    (org-clock-report-include-clocking-task t)
+    (org-show-notification-handler (lambda (msg) (alert msg))))
+#+end_src
+
+
+Being a person with a very low ability to concentrate, I use the =pomodoro=
+method to be able to concentrate throughout the day and have deep focus sessions
+almost all the time.
+
+Personally, I do sessions of:
+- *25 minutes of concentrated work*;
+- *5 minutes break*.
+
+Finally, I *take a 30-minute break every two hours*.
+
+To allow this, I use =org-pomodoro= making sure I get that in my status bar:
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-pomodoro
+    :defer 0.5
+    :custom
+    (alert-user-configuration (quote ((((:category . "org-pomodoro")) libnotify nil))))
+    (org-pomodoro-audio-player "/usr/bin/mpv")
+    (org-pomodoro-finished-sound "~/Audio/pomodoro_finished.mp3")
+    (org-pomodoro-format " %s")
+    (org-pomodoro-killed-sound "~/Audio/pomodoro_killed.mp3")
+    (org-pomodoro-long-break-sound "~/Audio/pomodoro_long.mp3")
+    (org-pomodoro-overtime-sound "~/Audio/pomodoro_overtime.mp3")
+    (org-pomodoro-short-break-sound "~/Audio/pomodoro_short.mp3")
+    (org-pomodoro-start-sound "~/Audio/pomodoro_start.mp3")
+    (org-pomodoro-start-sound-p t))
+#+end_src
+
+** Contacts
+
+The best solution to maintain your contacts. I tend to use =org-contacts= to
+remember their birthdays, so I can be the first to wish them that. Be careful
+that to install it, this one is available with =org-plus-contrib=.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-contacts
+    :ensure nil
+    :after org
+    :custom (org-contacts-files '("~/.personal/agenda/contacts.org")))
+#+end_src
+
+** Customization
+
+Let's change the foreground and the weight of each keyword.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-faces
+    :ensure nil
+    :after org
+    :custom
+    (org-todo-keyword-faces
+     '(("DONE" . (:foreground "cyan" :weight bold))
+       ("SOMEDAY" . (:foreground "gray" :weight bold))
+       ("TODO" . (:foreground "green" :weight bold))
+       ("WAITING" . (:foreground "red" :weight bold)))))
+#+end_src
+
+** Encryption / Decryption
+
+To be able to enable encryption and decryption of =.gpg= files with =org-mode=,
+we will need to install =gnupg2=.
+
+Once this is done, we simply configure =org-crypt= to accept our public key
+identifier to allow asymmetric encryption.
+
+*NOTE:* you need to modify the =org-crypt-key= variable to replace my key
+identifier, by yours (or =nil= to allow symmetric encryption).
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-crypt
+    :ensure nil
+	:after org
+    :init (org-crypt-use-before-save-magic)
+    :custom (org-crypt-key "E9AADC36E94A672D1A07D49B208FCDBB98190562"))
+#+end_src
+
+** Journal
+
+Recently, I started writing a journal about my daily life as I read that
+journals improve mental clarity, help solve problems, improve overall focus,
+insight and understanding, track the overall development and facilitate personal
+growth.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package org-journal
+    :after org
+    :bind (("C-c T" . org-journal-new-entry)
+           ("C-c Y" . journal-file-yesterday))
+    :preface
+    (defun get-journal-file-yesterday ()
+      "Gets filename for yesterday's journal entry."
+      (let* ((yesterday (time-subtract (current-time) (days-to-time 1)))
+             (daily-name (format-time-string "%Y%m%d" yesterday)))
+        (expand-file-name (concat org-journal-dir daily-name))))
+
+    (defun journal-file-yesterday ()
+      "Creates and load a file based on yesterday's date."
+      (interactive)
+      (find-file (get-journal-file-yesterday)))
+    :custom
+    (org-journal-date-format "%e %b %Y (%A)")
+    (org-journal-dir (format "~/.personal/journal/" (format-time-string "%Y")))
+    (org-journal-enable-encryption t)
+    (org-journal-file-format "%Y%m%d")
+    (org-journal-time-format ""))
+#+end_src
+
+** Languages
+
+With that, I can compile many languages with =org-mode=.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package ob-C :ensure nil :after org)
+  (use-package ob-css :ensure nil :after org)
+  (use-package ob-ditaa :ensure nil :after org)
+  (use-package ob-dot :ensure nil :after org)
+  (use-package ob-emacs-lisp :ensure nil :after org)
+  (use-package ob-gnuplot :ensure nil :after org)
+  (use-package ob-java :ensure nil :after org)
+  (use-package ob-js :ensure nil :after org)
+
+  (use-package ob-latex
+    :ensure nil
+    :after org
+    :custom (org-latex-compiler "xelatex"))
+
+  (use-package ob-ledger :ensure nil :after org)
+  (use-package ob-makefile :ensure nil :after org)
+  (use-package ob-org :ensure nil :after org)
+
+  (use-package ob-plantuml
+    :ensure nil
+    :after org
+    :custom (org-plantuml-jar-path (expand-file-name (format "%s/plantuml.jar" xdg-lib))))
+
+  (use-package ob-python :ensure nil :after org)
+  (use-package ob-ruby :ensure nil :after org)
+  (use-package ob-shell :ensure nil :after org)
+  (use-package ob-sql :ensure nil :after org)
+#+end_src
